# haskell

./: .hlint.yaml  LICENSE  cabal.project  cabal.project.freeze
.github/workflows/: an.yaml  application.yaml  approx.cabal  approx.yaml  autobiographer.cabal  autobiographer.yaml  code-quality.yaml  constrained-categories  constrained-categories.yaml  constrained.cabal  constrained.yaml  event.yaml  herald.yaml  incremental.yaml  lint.yaml  managed-async.yaml  named.yaml  paparazzi.yaml  postfix.yaml  test.yaml  units.yaml  variant.yaml  via.yaml
an/: README.md  an.cabal
an/source/Data/: An.hs  An.lhs
an/tests/: Main.hs  README.lhs
application/: application.cabal
application/source/Control/: Application.hs
application/source/Control/Application/: Command.hs  Subscription.hs
application/tests/: Main.hs
approx/: README.md  approx.cabal
approx/source/Data/: Approx.hs
approx/tests/Data/: ApproxSpec.hs
autobiographer/: README.md  autobiographer.cabal
autobiographer/source/Control/Applicative/: Timeline.hs
autobiographer/tests/: Main.hs
constrained/: README.md  constrained.cabal
constrained-categories/: README.md  constrained-categories.cabal
constrained-categories/source/Control/Cartesian/: Constrained.hs
constrained-categories/source/Control/Category/: Constrained.hs
constrained-categories/source/Control/Closed/: Constrained.hs
constrained-categories/source/Control/Cocartesian/: Constrained.hs
constrained-categories/tests/Test/: CartesianSpec.hs  CategorySpec.hs  ClosedSpec.hs  CocartesianSpec.hs  Orphans.hs
constrained/source/Data/Constraint/: Generic.hs  Helpers.hs  Proof.hs
enriched-profunctors/: README.md  enriched-profunctors.cabal
enriched-profunctors/source/Data/Profunctor/: Enriched.hs
enriched-profunctors/source/Data/Profunctor/Choice/: Enriched.hs
enriched-profunctors/source/Data/Profunctor/Closed/: Enriched.hs
enriched-profunctors/source/Data/Profunctor/Strong/: Enriched.hs
enriched-profunctors/tests/Test/: ChoiceSpec.hs  ClosedSpec.hs  Orphans.hs  ProfunctorSpec.hs  StrongSpec.hs
event/: README.md  event.cabal
event/source/Data/: Event.hs
event/tests/: Main.hs
generic-profunctors/: README.md  generic-profunctors.cabal
generic-profunctors/source/Control/Category/: Generic.hs
generic-profunctors/source/Data/Optics/: Constructor.hs  Field.hs  Helper.hs
generic-profunctors/source/Data/Profunctor/: Generic.hs
generic-profunctors/tests/Test/: ConstructorSpec.hs  FieldSpec.hs
herald/: README.md  herald.cabal
herald/source/Herald/: Schema.hs
herald/tests/: ArraySpec.hs  BooleanSpec.hs  NumberSpec.hs  ObjectSpec.hs  StringSpec.hs  Utilities.hs
incremental/: README.md  incremental.cabal
incremental/source/Data/: Change.hs
incremental/tests/Data/: ChangeSpec.hs
managed-async/: README.md  managed-async.cabal
managed-async/source/Control/Concurrent/Async/: Managed.hs
named/: README.md  named.cabal
named/source/Data/: Named.hs  Named.lhs
named/tests/: Main.hs  README.lhs
paparazzi/: README.md  paparazzi.cabal
paparazzi/source/Graphics/Rendering/OpenGL/: Snapshot.hs
paparazzi/tests/: Main.hs  shader.frag  shader.vert
postfix/: README.md  postfix.cabal
postfix/source/: Postfix.hs
postfix/source/Postfix/: Aliases.hs  Instances.hs  Introspection.hs
postfix/source/Postfix/Instances/: Orphans.hs
postfix/tests/: Main.hs
units/: units.cabal
units/source/Measurement/: Angle.hs
units/source/Measurement/Coordinate/: Plane.hs  Space.hs
units/tests/Measurement/: AngleSpec.hs  CoordinateSpec.hs  Helpers.hs
units/tests/Measurement/Coordinate/: PlaneSpec.hs  SpaceSpec.hs
variant/: variant.cabal
variant/source/Data/: Variant.hs
variant/source/Data/Variant/: QQ.hs
variant/tests/: Main.hs  README.lhs
via/: README.md  via.cabal
via/source/Data/: Via.hs
via/tests/: Main.hs
