cabal-version: 3.0
name: enriched-profunctors
version: 0.0.0.0

library
  exposed-modules:
    Data.Profunctor.Enriched
    Data.Profunctor.Strong.Enriched
    Data.Profunctor.Choice.Enriched
    Data.Profunctor.Closed.Enriched
  build-depends:
    , base
    , constrained-categories
  hs-source-dirs: source
  default-language: GHC2021

test-suite tests
  build-depends:
    , base
    , constrained-categories
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , enriched-profunctors
  build-tool-depends:
    tasty-discover:tasty-discover
  main-is: Driver.hs
  other-modules:
    Test.ChoiceSpec
    Test.ClosedSpec
    Test.Orphans
    Test.ProfunctorSpec
    Test.StrongSpec
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  default-language: GHC2021
