cabal-version: 3.0
name: event
version: 0.0.0.0

library
  exposed-modules:
    Data.Event
  build-depends:
    , async
    , base
    , unordered-containers
    , named
    , witherable
  hs-source-dirs: source
  default-language: GHC2021

test-suite tests
  build-depends:
    , base
    , event
    , hspec
  main-is: Main.hs
  type: exitcode-stdio-1.0
  ghc-options: -pgmL markdown-unlit -Wall
  build-tool-depends: markdown-unlit:markdown-unlit
  hs-source-dirs: tests
  default-language: GHC2021
