cabal-version: 3.0
name: named
version: 0.0.0.0

library
  exposed-modules:
    Data.Named
  build-depends:
    , base
    , hashable
  ghc-options: -pgmL markdown-unlit -Wall
  build-tool-depends: markdown-unlit:markdown-unlit
  hs-source-dirs: source
  default-language: GHC2021

test-suite tests
  build-depends:
    , base
    , hspec
    , named
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  default-language: GHC2021
