cabal-version: 3.0
name: variant
version: 0.0.0.0

library
  exposed-modules:
    Data.Variant
    Data.Variant.QQ
  build-depends:
    , attoparsec
    , base
    , haskell-src-meta
    , template-haskell
  hs-source-dirs: source
  default-language: GHC2021

test-suite tests
  build-depends:
    , base
    , hspec
    , variant
  main-is: Main.hs
  type: exitcode-stdio-1.0
  ghc-options: -pgmL markdown-unlit -Wall
  build-tool-depends: markdown-unlit:markdown-unlit
  hs-source-dirs: tests
  default-language: GHC2021
  other-modules: README
