cabal-version: 3.0
name: via
version: 0.0.0.0

library
  exposed-modules:
    Data.Via
  build-depends:
    , base
    , witch
  hs-source-dirs: source
  default-language: GHC2021

test-suite tests
  build-depends:
    , via
    , base
    , hspec
    , witch
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  default-language: GHC2021
