name: approx

on:
  push:

jobs:
  test:
    runs-on: ubuntu-latest

    steps:
    - run: sudo apt-get install -y libsdl2-dev

    - uses: actions/checkout@v3

    - uses: haskell-actions/setup@v2
      id: setup
      with:
        ghc-version: 9.8.1

    - uses: actions/cache@v3
      with:
        key: approx-build
        path: |
          ${{ steps.setup.outputs.cabal-store }}
          dist-newstyle
          ~/.ghcup

    - run: cabal update

    - run: cabal build approx --only-dependencies

    - run: cabal build approx --ghc-options=-Werror

    - run: cabal build approx:test:tests --ghc-options=-Werror

    - run: cabal test approx
